--- a/pembayaran.html
+++ b/pembayaran.html
@@ -128,7 +128,7 @@
 
     <p style="margin:6px 0 4px 0"><strong>Nomor DANA:</strong> <span style="color:#001827;background:#0FFCBE;padding:4px 8px;border-radius:6px;font-weight:900">083821665970</span></p>
 
-    <img src="https://i.imgur.com/vxI5p9w.png" alt="Qris" class="qr-img" />
+    <img src="https://raw.githubusercontent.com/username/repo/main/qriss.png" alt="Qris" class="qr-img" />
 
     <!-- Keranjang (jika ada) -->
     <div id="cart-found" style="display:none">
