--- a/request-flm.html
+++ b/request-flm.html
@@ -80,7 +80,7 @@
     <h2>Request FLM - Muslih Fvnky</h2>
     <p><strong>Nomor DANA:</strong> 083821665970</p>
 
-    <img src="https://i.imgur.com/vxI5p9w.png" alt="Qris" class="qr-img" />
+    <img src="https://raw.githubusercontent.com/username/repo/main/qriss.png" alt="Qris" class="qr-img" />
 
     <label for="produk">Judul / Jenis FLM:</label>
     <input type="text" id="produk" placeholder="Contoh: FLM Trabas" required />
