--- a/jual-flm.html
+++ b/jual-flm.html
@@ -294,6 +294,7 @@
       <label><input type="checkbox" class="filter-cat" value="bootleg"> Bootleg</label>
       <label><input type="checkbox" class="filter-cat" value="indobass"> Indobass</label>
       <label><input type="checkbox" class="filter-cat" value="FYP Tiktok"> FYP Tiktok</label>
+      <label><input type="checkbox" class="filter-cat" value="ENAFF"> ENAFF</label>
     </aside>
 
     <!-- CART PANEL -->
@@ -466,7 +467,7 @@
       </li>
 
       <!-- 11 -->
-      <li data-uid="10" data-prod-id="enaff" data-price="95500" data-category="indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-uid="10" data-prod-id="enaff" data-price="95500" data-category="indobass,ENAFF" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Enaff V1" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Enaff V1</div>
@@ -833,6 +834,118 @@
         </div>
         <audio id="audio33" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/33.mp3" preload="metadata"></audio>
       </li>
+      
+      <!-- 34 -->
+<li data-uid="33" data-prod-id="JJ BRUTAL MENGKANE" data-price="100000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+  <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JJ BRUTAL MENGKANE" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+  <div class="flex-1">
+    <div class="font-semibold leading-tight">JJ BRUTAL MENGKANE</div>
+    <div class="text-sm opacity-90">💲 Rp100.000</div>
+    <div class="mt-2 flex gap-2 items-center">
+      <button data-audio="audio34" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+      <a data-buy="JJ BRUTAL MENGKANE" href="pembayaran.html?produk=JJ BRUTAL MENGKANE" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+      <button data-cart="JJ BRUTAL MENGKANE" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+    </div>
+    <div class="player-controls-container"></div>
+  </div>
+  <audio id="audio34" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/34.mp3" preload="metadata"></audio>
+</li>
+
+      <!-- 35 -->
+<li data-uid="34" data-prod-id="STYLE REGGAE" data-price="78000" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+  <img src="https://i.imgur.com/ghNd4So.jpeg" alt="STYLE REGGAE" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+  <div class="flex-1">
+    <div class="font-semibold leading-tight">STYLE REGGAE</div>
+    <div class="text-sm opacity-90">💲 Rp78.000</div>
+    <div class="mt-2 flex gap-2 items-center">
+      <button data-audio="audio35" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+      <a data-buy="STYLE REGGAE" href="pembayaran.html?produk=STYLE REGGAE" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+      <button data-cart="STYLE REGGAE" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+    </div>
+    <div class="player-controls-container"></div>
+  </div>
+  <audio id="audio35" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/35.mp3" preload="metadata"></audio>
+</li>
+
+     <!-- 36 -->
+<li data-uid="35" data-prod-id="ENAFF MEJIKUHIBINU" data-price="95000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+  <img src="https://i.imgur.com/ghNd4So.jpeg" alt="ENAFF MEJIKUHIBINIU" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+  <div class="flex-1">
+    <div class="font-semibold leading-tight">ENAFF MEJIKUHIBINIU</div>
+    <div class="text-sm opacity-90">💲 Rp95.000</div>
+    <div class="mt-2 flex gap-2 items-center">
+      <button data-audio="audio36" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+      <a data-buy="ENAFF MEJIKUHIBINU" href="pembayaran.html?produk=ENAFF MEJIKUHIBINU" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+      <button data-cart="ENAFF MEJIKUHIBINU" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+    </div>
+    <div class="player-controls-container"></div>
+  </div>
+  <audio id="audio36" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/36.mp3" preload="metadata"></audio>
+</li>
+
+     <!-- 37 -->
+<li data-uid="36" data-prod-id="SLOW REMIX" data-price="80000" data-category="Slow,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+  <img src="https://i.imgur.com/ghNd4So.jpeg" alt="SLOW REMIX" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+  <div class="flex-1">
+    <div class="font-semibold leading-tight">SLOW REMIX</div>
+    <div class="text-sm opacity-90">💲 Rp80.000</div>
+    <div class="mt-2 flex gap-2 items-center">
+      <button data-audio="audio37" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+      <a data-buy="SLOW REMIX" href="pembayaran.html?produk=SLOW REMIX" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+      <button data-cart="SLOW REMIX" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+    </div>
+    <div class="player-controls-container"></div>
+  </div>
+  <audio id="audio37" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/37.mp3" preload="metadata"></audio>
+</li>
+
+     <!-- 38 -->
+<li data-uid="37" data-prod-id="STYLE FUNKOT" data-price="108000" data-category="Indobass,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+  <img src="https://i.imgur.com/ghNd4So.jpeg" alt="STYLE FUNKOT" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+  <div class="flex-1">
+    <div class="font-semibold leading-tight">STYLE FUNKOT</div>
+    <div class="text-sm opacity-90">💲 Rp108.000</div>
+    <div class="mt-2 flex gap-2 items-center">
+      <button data-audio="audio38" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+      <a data-buy="STYLE FUNKOT" href="pembayaran.html?produk=STYLE FUNKOT" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+      <button data-cart="STYLE FUNKOT" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+    </div>
+    <div class="player-controls-container"></div>
+  </div>
+  <audio id="audio38" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/38.mp3" preload="metadata"></audio>
+</li>
+
+     <!-- 39 -->
+     <li data-uid="38" data-prod-id="JJ ENAFF ASOY" data-price="100000" data-category="ENAFF,FYP Tiktok" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JJ ENAFF ASOY" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">JJ ENAFF ASOY</div>
+         <div class="text-sm opacity-90">💲 Rp100.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio39" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="JJ ENAFF ASOY" href="pembayaran.html?produk=JJ ENAFF ASOY" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="JJ ENAFF ASOY" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio39" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/39.mp3" preload="metadata"></audio>
+     </li>
+
+     <!-- 40 -->
+     <li data-uid="39" data-prod-id="JDM ALONE MARSHMELLOW" data-price="100000" data-category="ENAFF,FYP Tiktok,Indobass" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+       <img src="https://i.imgur.com/ghNd4So.jpeg" alt="JDM ALONE MARSHMELLOW" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
+       <div class="flex-1">
+         <div class="font-semibold leading-tight">JDM ALONE MARSHMELLOW</div>
+         <div class="text-sm opacity-90">💲 Rp100.000</div>
+         <div class="mt-2 flex gap-2 items-center">
+           <button data-audio="audio40" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white transition">▶ Play Preview</button>
+           <a data-buy="JDM ALONE MARSHMELLOW" href="pembayaran.html?produk=JDM ALONE MARSHMELLOW" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover:text-black font-medium transition">🛒 Beli</a>
+           <button data-cart="JDM ALONE MARSHMELLOW" class="add-cart-btn px-3 py-2 rounded-xl bg-[#ffd24d] text-black font-semibold">Tambah ke Keranjang</button>
+         </div>
+         <div class="player-controls-container"></div>
+       </div>
+       <audio id="audio40" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/40.mp3" preload="metadata"></audio>
+     </li>
 
     </ul>
   </main>
@@ -875,7 +988,14 @@
       audio30: 224,
       audio31:44,
       audio32:313,
-      audio33:36
+      audio33:36,
+      audio34:125,
+      audio35:276,
+      audio36:123,
+      audio37:209,
+      audio38:249,
+      audio39:94,
+      audio40:126
     };
 
     // Helper: format seconds -> mm:ss
